--- a/.gitmodules
+++ b/.gitmodules
@@ -5,4 +5,6 @@
 [submodule "regression-tests"]
 	path = regression-tests
 	url = https://github.com/pulp-platform/regression_tests.git
-    branch = astral
+[submodule "fault_injection_sim"]
+	path = fault_injection_sim
+	url = git@iis-git.ee.ethz.ch:michaero/fault_injection_sim.git
